--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -1,15 +1,11 @@
 <!-- Navbar elements -->
 <link rel="import" href="/bower_components/paper-header-panel/paper-header-panel.html">
-<link rel="import" href="/bower_components/paper-toolbar/paper-toolbar.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tab.html">
 <link rel="import" href="/bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="/bower_components/paper-menu/paper-menu.html">
 <link rel="import" href="/bower_components/paper-menu-button/paper-menu-button.html">
 
 <!-- General -->
 <link rel="import" href="/bower_components/iron-ajax/iron-ajax.html">
-<link rel="import" href="/bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="/bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="/bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="/bower_components/paper-toast/paper-toast.html">
@@ -21,6 +17,8 @@
 <!-- Routing -->
 <link rel="import" href="routing.html">
 
-<!-- TODO(victorbalan): investigate why this element causes the flickering -->
+<link rel="import" href="/elements/common/coduno-iron-ajax.html">
 <link rel="import" href="/elements/common/skill/skill-list.html">
 <link rel="import" href="/elements/common/services/challenge-template-service.html">
+<link rel="import" href="/elements/app-nav.html">
+<!-- TODO(victorbalan): investigate what imports cause flickering -->
