--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -20,5 +20,6 @@
 <link rel="import" href="/elements/common/coduno-iron-ajax.html">
 <link rel="import" href="/elements/common/skill/skill-list.html">
 <link rel="import" href="/elements/common/services/challenge-template-service.html">
+<link rel="import" href="/elements/common/services/cookie-service.html">
 <link rel="import" href="/elements/app-nav.html">
 <!-- TODO(victorbalan): investigate what imports cause flickering -->
