--- a/app/elements/common/services/challenge-template-service.html
+++ b/app/elements/common/services/challenge-template-service.html
@@ -85,6 +85,9 @@
 				this.$.getMultiChallengeTemplates.generateRequest();
 			},
 			getAll: function(){
+				if(!util.organization()){
+					return page.redirect('/');
+				}
 				this.app.startLoading();
 				this.$.getMultiChallengeTemplates.url = util.build('/challenges/templates?organization=' + util.organization().id);
 				this.$.getMultiChallengeTemplates.generateRequest();
