--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -1,24 +1,20 @@
 <script src="../bower_components/page/page.js"></script>
 <script>
 window.addEventListener('WebComponentsReady', function() {
-	function checkIsOrganization() {
-		return !!app.userInfo.organization || page.redirect('/login');
-	}
-
 	page('/', function() {
 		if (app.userInfo.organization) {
 			page('/challenges');
 		} else if(app.userInfo.user){
-			page('/challenge');
+			// TODO add a default /home route
+			page('/login');
 		} else {
-				page('/login');
+			page('/login');
 		}
 	});
 
 	page('/token/:token', function(context) {
 		app.route = 'token';
-		var token = context.params.token;
-		app.inviteByToken(token);
+		app.inviteByToken(context.params.token);
 	});
 
 	page('/register', function() {
@@ -54,11 +50,10 @@ window.addEventListener('WebComponentsReady', function() {
 		});
 	});
 
-	page('/challenges/:challengeKey', function(data){
-		checkIsOrganization();
+	page('/challenges/:id', function(data){
 		app.route = 'challenge-detail';
 		Polymer.Base.importHref('/elements/company/challenge/template/challenge-template-detail.html', function(){
-			app.$.challengeTemplateDetail.loadData(data.params.challengeKey);
+			app.$.challengeTemplateDetail.loadData(data.params.id);
 		});
 	});
 
@@ -67,13 +62,11 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page('/coders/:id', function(data) {
-		checkIsOrganization();
 		app.route = 'coder-info';
 		app.params = data.params;
 	});
 
 	page('/tasks', function() {
-		checkIsOrganization();
 		app.route = 'tasks';
 		Polymer.Base.importHref('/elements/company/task/task-list.html', function(){
 			app.$.taskList.getTasks();
@@ -81,7 +74,6 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page('/tasks/:id', function(data) {
-		checkIsOrganization();
 		app.route = 'task-detail';
 		Polymer.Base.importHref('/elements/company/task/task-detail.html', function() {
 			app.$.taskDetail.getTask(data.params.id);
@@ -89,31 +81,27 @@ window.addEventListener('WebComponentsReady', function() {
 	});
 
 	page('/task/create', function(){
-		checkIsOrganization();
 		app.route = 'task-create';
 		Polymer.Base.importHref('/elements/company/task/task-form.html');
 	});
 
 	page('/task/edit/:id', function(context){
-		checkIsOrganization();
 		app.route = 'task-edit';
 		app.$.taskEditForm.taskId = context.params.id;
 		Polymer.Base.importHref('/elements/company/task/task-form.html');
 	});
 
-	page('/user/:userKey', function(context){
-		checkIsOrganization();
+	page('/user/:id', function(context){
 		app.route = 'user';
 		Polymer.Base.importHref('/elements/company/user/user-detail.html', function(){
-			app.$.userDetail.getData(context.params.userKey);
+			app.$.userDetail.getData(context.params.id);
 		});
 	});
 
-	page('/user/:userKey/challenge/:challengeKey', function(context){
-		checkIsOrganization();
+	page('/user/:userId/challenge/:challengeId', function(context){
 		app.route = 'userChallenge';
 		Polymer.Base.importHref('/elements/company/user/challenge/user-challenge-detail.html', function(){
-			app.$.userChallengeDetail.getData(context.params.userKey, context.params.challengeKey);
+			app.$.userChallengeDetail.getData(context.params.userId, context.params.challengeId);
 		});
 	});
 
