--- a/app/elements/app-element.html
+++ b/app/elements/app-element.html
@@ -20,22 +20,6 @@
 					<register-page data-route="register"></register-page>
 
 					<user-detail id="userDetail" data-route="user" class="fullHeight"></user-detail>
-					<section data-route="challenge-templates">
-						<challenge-template-list id="challengeList"></challenge-template-list>
-					</section>
-
-					<section data-route="challenge-template-detail">
-						<challenge-template-detail id="challengeTemplateDetail"></challenge-template-detail>
-					</section>
-
-					<section data-route="challenge" class="fullHeight">
-						<challenge-page challenge-id="{{challenge}}"></challenge-page>
-					</section>
-
-					<section data-route="challenge-create" class="fullHeight">
-						<challenge-create id="challengeCreate"></challenge-create>
-					</section>
-
 
 					<error-page id="error" error="{{error}}" data-route="error"></error-page>
 					<paper-material elevation="1" data-route="unauthorized">
@@ -43,11 +27,12 @@
 					</paper-material>
 					<!-- COMPANY -->
 					<challenge-create id="challengeCreate" data-route="challenge-create" class="fullHeight"></challenge-create>
+					<challenge-detail id="challengeDetail"  data-route="challenge-detail"></challenge-detail>
 
 					<user-challenge-detail id="userChallengeDetail" data-route="userChallenge" class="fullHeight"></user-challenge-detail>
 
-					<challenge-template-list id="challengeList" data-route="challenges"></challenge-template-list>
-					<challenge-template-detail id="challengeTemplateDetail" data-route="challenge-detail"></challenge-template-detail>
+					<challenge-template-list id="challengeList" data-route="challenge-templates"></challenge-template-list>
+					<challenge-template-detail id="challengeTemplateDetail" data-route="challenge-template-detail"></challenge-template-detail>
 
 					<task-form id="taskForm" edit="false" data-route="task-create"></task-form>
 					<task-form id="taskEditForm" edit="true" data-route="task-edit"></task-form>
