--- a/app/elements/app-nav.html
+++ b/app/elements/app-nav.html
@@ -16,7 +16,7 @@
 					<paper-tabs id="bottomTabs" class="bottom indent" selected="{{selected}}" noink no-slide>
 						<span class="flex-5"></span>
 						<template is="dom-if" if="{{isCompany}}">
-							<paper-tab link><a href="/challenges" class="center-center horizontal layout">Challenges</a></paper-tab>
+							<paper-tab link><a href="/challengetemplates" class="center-center horizontal layout">Challenges</a></paper-tab>
 							<paper-tab link><a href="/tasks" class="center-center horizontal layout fullHeight">Tasks</a></paper-tab>
 						</template>
 						<template is="dom-if" if="{{isCoder}}">
