--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -64,7 +64,7 @@
 			},
 			_savedChallengeChanged: function(){
 				this.challenge = {};
-				page('/challenges/' + this.challengeTemplate);
+				page('/challenges/' + this.savedChallenge);
 			}
 		});
 	</script>
