--- a/app/elements/company/challenge-template/challenge-template-modal.html
+++ b/app/elements/company/challenge-template/challenge-template-modal.html
@@ -92,7 +92,8 @@
 				}
 				this.challengeTemplateToSave.tasks = taskIds;
 				this.challengeTemplateToSave.duration = 60 * this.challengeTemplateDuration;
-				this.challengeTemplateToSave.endpoint = this.selectedEndpoint.value;
+				this.challengeTemplateToSave.endpointId = this.selectedEndpoint.value;
+				this.challengeTemplateToSave.organizationId = util.organization().id;
 				this.$.challengeTemplateService.save(this.challengeTemplateToSave);
 				this.fire('challenge-template-created');
 				this.$.dialog.close();
