--- a/app/elements/coder/code-editor/consoles/test-stats-console.html
+++ b/app/elements/coder/code-editor/consoles/test-stats-console.html
@@ -61,11 +61,27 @@
 				},
 				style: {
 					type: String
+				},
+				testStats: {
+					type: Object,
+					value: {},
+					observer: '_testStatsObserver'
 				}
 			},
 			observers: [
 				'_afterPropertiesSet(task)'
 			],
+			_testStatsObserver: function(){
+				if(!this.tests){
+					return;
+				}
+				for(var i = 0;i<this.tests.length; i ++){
+					if(!this.testTstats[this.tests[i].id]){
+						return;
+					}
+				}
+				this.fire('all-green');
+			},
 			_afterPropertiesSet: function(){
 				this.$.getTestsRequest.url = util.build('/tasks/' + this.task.id + '/tests');
 				this.$.getTestsRequest.generateRequest();
@@ -95,6 +111,7 @@
 
 			},
 			loading: function(){
+				this.testStats = {};
 				this.dataStyle = '';
 				this.stderr = '';
 				if(!this.tests){
@@ -108,6 +125,7 @@
 				console.log(err);
 			},
 			appendTestStats: function(result){
+				this.testStats[result.Test] = result.Failed;
 				var element = this.$$('#test' + result.Test);
 				if(!!element){
 					element.setFailed(result.Failed);
